Fix: Force rebuild and improve startup logging

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,6 +12,10 @@ COPY . .
 # 修复权限问题 - 确保 node_modules/.bin 中的所有文件都有执行权限
 RUN chmod +x node_modules/.bin/* || true
 
+# 强制清理旧的构建输出
+RUN rm -rf dist || true
+
+# 重新编译
 RUN npm run build
 
 # 生产阶段
@@ -27,5 +31,9 @@ RUN npm ci --omit=dev --legacy-peer-deps
 COPY --from=builder /app/dist ./dist
 
 EXPOSE 8080
+
+# 添加健康检查
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:8080', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"
 
 CMD ["npm", "run", "start:prod"]
