更换数据库

--- a/server/.env.production
+++ b/server/.env.production
@@ -3,8 +3,8 @@ PORT=8080
 NODE_ENV=production
 
 # 数据库配置（RDS 云端）
-DB_HOST=rm-bp1q7q738a8wzrjkn.mysql.rds.aliyuncs.com
-DB_USERNAME=vehiclerepair
+DB_HOST=rm-bp11192vt16f74f13lo.mysql.rds.aliyuncs.com
+DB_USERNAME=root
 DB_PASSWORD=88888888@abc
 DB_DATABASE=vehicle_repair
 DB_SYNC=false
