更换数据库

--- a/server/.env
+++ b/server/.env
@@ -4,12 +4,12 @@
 PORT=3000
 
 # ============================================
-# 🧱 数据库配置（MySQL）
+# 🧱 数据库配置（MySQL - 阿里云 RDS）
 # ============================================
-DB_HOST=localhost
+DB_HOST=rm-bp11192vt16f74f13lo.mysql.rds.aliyuncs.com
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=1433223
+DB_PASSWORD=88888888@abc
 DB_DATABASE=vehicle_repair
 
 # 是否自动同步表结构（生产环境建议 false）
